--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,9 +22,12 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".SearchBookActivity" />
+        <activity android:name=".ReadingScheduleActivity" />
+        <activity android:name=".CompleteListActivity" />
         <activity android:name=".ReviewListActivity" />
         <activity android:name=".AddReviewActivity" />
-        <activity android:name=".CompleteListActivity" />
+
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
