--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ android {
 
 dependencies {
     implementation "androidx.room:room-runtime:2.5.2"
+    implementation libs.activity
     annotationProcessor "androidx.room:room-compiler:2.5.2"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
