--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
 
 android {
     namespace 'com.example.myapplication'
-    compileSdk 34
+    compileSdk 35
 
     defaultConfig {
         applicationId "com.example.myapplication"
@@ -43,6 +43,9 @@ dependencies {
     testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test.ext:junit:1.1.5"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
+    implementation "androidx.work:work-runtime:2.10.0" // 최신 버전 확인
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.7" // Use the latest version
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.8.7"
 }
 
 configurations.all {
