- (남은쪽수/남은기간)으로 오늘읽을책분량 정하기 - Book.java에 boolean completedToday 추가 true면 오늘의 독서는 끝, 메인화면에서 스케쥴 버튼을 눌렀을 때 ReadingScheduleActivity3으로 이동 false면 오늘의 독서가 끝나지 않음, 메인화면에서 스케쥴 버튼을 눌렀을 때 ReadingSchedule로 이동 - 매일 00시 00분에 (기준이 한국이 아님, 변경필요)completedToday를 false로 초기화. DailyWork.java 와 WorkScheduler.java로 구현 - BookViewModel.java는 데이터베이스의 변경사항이 존재하는지 지속적으로 관찰하는 역할. 이를 이용해서 readingScheduleButton 기능 심화
이후 구현할내용 :
1)ReadingSchedule3 구현 (OK)
2)마지막날이 지나면 독서를 종료하고, 실패했을 경우 재도전 권유 (OK)
3)오늘의 목표 달성 여부에 따른 문구 교체 (OK)
4)독서 종료 시 데이터베이스에서 책 삭제하고 완독목록에 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,13 +17,16 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
-            android:name=".ReadingScheduleActivity3"
+            android:name=".ReadingScheduleActivity4"
             android:exported="false" />
         <activity
-            android:name=".ReadingScheduleActivity2"
+            android:name=".TodayReadingEnd"
             android:exported="false" />
         <activity
-            android:name=".ReadingScheduleActivity1"
+            android:name=".ReadingSchedule"
+            android:exported="false" />
+        <activity
+            android:name=".RegisterBook"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
@@ -35,8 +38,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".SearchBookActivity" />
-        <activity android:name=".RegisterBook" />
-        <activity android:name=".ReadingSchedule" />
         <activity android:name=".CompleteListActivity" />
         <activity android:name=".ReviewListActivity" />
         <activity android:name=".AddReviewActivity" />
