--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     alias(libs.plugins.android.application)
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -46,6 +47,10 @@ dependencies {
     implementation "androidx.work:work-runtime:2.10.0" // 최신 버전 확인
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.7" // Use the latest version
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.8.7"
+
+    implementation(platform("com.google.firebase:firebase-bom:33.7.0"))
+    implementation("com.google.firebase:firebase-analytics")
+    implementation 'com.google.firebase:firebase-messaging:23.1.0'
 }
 
 configurations.all {
