--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,11 @@ buildscript {
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.gms:google-services:4.3.15'
     }
 }
 
 plugins {
 alias(libs.plugins.android.application) apply false
+    id("com.google.gms.google-services") version "4.4.2" apply false
 }
