--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     alias(libs.plugins.android.application)
-    id 'com.google.gms.google-services'
+    //id 'com.google.gms.google-services'
 }
 
 android {
@@ -48,12 +48,12 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.7" // Use the latest version
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.8.7"
 
-    implementation(platform("com.google.firebase:firebase-bom:33.7.0"))
+    /*implementation(platform("com.google.firebase:firebase-bom:33.7.0"))
     implementation("com.google.firebase:firebase-analytics")
-    implementation 'com.google.firebase:firebase-messaging:23.1.0'
+    implementation 'com.google.firebase:firebase-messaging:23.1.0'*/
 
-    implementation 'androidx.core:core:1.12.0'
-    implementation 'androidx.core:core-ktx:1.12.0'
+    //implementation 'androidx.core:core:1.12.0'
+    //implementation 'androidx.core:core-ktx:1.12.0'
 
 }
 
